# fashiondiffusion

./: .gitignore  .pdm-python  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
src/: fast.py
src/api/: fast.py
src/config/: optimized_sd.yaml  txt2img.yaml
src/data/: fashiongen.py
src/diffusion/: diffusion_helpers.py  gaussian_diffusion.py  spatialattention.py  unet.py
src/embeddings/: optim.py
src/encoders/: imageembedder.py  textembedder.py  vae.py
src/fashiondiffusion/: untrained.py
src/models/: config.yaml
src/modules/: ema.py  utils.py
src/modules/diffusionmodules/: attention.py  diagonalgaussian.py  models.py  spatialattention.py  unet.py  unet_modules.py
src/modules/encoders/: autoencoder.py  base.py  textembedder.py  vae.py  vq_vae.py
src/modules/ldm/: diffusion.py  latentdiffusion.py
src/modules/sampler/: ddim.py  plms.py
src/optim/: clip_embeddings.py  model_train.py
src/scheduler/: ddim.py  lr_scheduler.py  util.py
src/webui/: dataexplorer.py  home.py  util.py
src/webui/pages/: 1_dataexplorer.py  2_latentdiffusion.py
tests/: test_generate_image.py  test_optimized_sd.py
