[project]
name = "fashiondiffusion"
version = "0.1.0"
description = "framework for a text2image diffusion model"
authors = [
    {name = "Sinan Harms", email = "sinan.harms@uni-bielefeld.de"},
]
dependencies = []
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"
