[project]
name = "fashiondiffusion"
version = "0.1.0"
description = "framework for a text2image diffusion model"
authors = [
    {name = "Sinan Harms", email = "sinan.harms@uni-bielefeld.de"},
]
dependencies = [
    "torch>=2.2.1",
    "streamlit>=1.32.2",
    "fastapi>=0.110.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"
